# alphazero

./: .gitignore  Cargo.toml  PLAN.md  README.md  requirements.txt
alphazero/: pyproject.toml
alphazero-py/: Cargo.toml
alphazero-py/src/: lib.rs
alphazero/alphazero/: __init__.py  cli.py
alphazero/tests/: test_cli.py
chess-engine/: Cargo.toml
chess-engine/src/: attacks.rs  bitboard.rs  board.rs  fen.rs  game.rs  lib.rs  magic.rs  makemove.rs  movegen.rs  moves.rs  perft.rs  types.rs  zobrist.rs
mcts/: Cargo.toml
mcts/src/: arena.rs  backup.rs  batch.rs  config.rs  expand.rs  lib.rs  nn.rs  node.rs  reuse.rs  search.rs  select.rs  transposition.rs
neural/: pyproject.toml
neural/neural/: __init__.py  blocks.py  config.py  encoding.py  export.py  losses.py  moves.py  network.py
neural/tests/: test_blocks.py  test_config.py  test_encoding.py  test_export.py  test_losses.py  test_moves.py  test_network.py
orchestrator/: pyproject.toml
orchestrator/orchestrator/: __init__.py  config.yaml  config_smoke.yaml  coordinator.py  evaluate.py  weights.py
orchestrator/tests/: test_coordinator.py  test_evaluate.py  test_weights.py
self-play/: Cargo.toml
self-play/src/: buffer.rs  data.rs  game.rs  lib.rs  main.rs  serialize.rs
training/: pyproject.toml
training/scripts/: coordinator.sh  selfplay.sh  submit_coordinator.sh  submit_selfplay.sh  submit_train.sh  train.sh
training/tests/: test_buffer.py  test_checkpoint.py  test_dataloader.py  test_distributed.py  test_metrics.py  test_train.py
training/training/: __init__.py  buffer.py  checkpoint.py  dataloader.py  distributed.py  metrics.py  train.py
