[project]
name = "alphazero-cli"
version = "0.1.0"
description = "AlphaZero Chess CLI"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pyyaml>=6.0",
    "python-chess>=1.0",
]

[project.scripts]
alphazero = "alphazero.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
