[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphazero-training"
version = "0.1.0"
description = "Training pipeline for AlphaZero chess engine"
requires-python = ">=3.10"
dependencies = [
    "msgpack>=1.0",
    "numpy>=1.24",
    "torch>=2.0",
    "alphazero-neural",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
